--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,16 +39,17 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="216dp"
-            android:layout_height="71dp"
+            android:layout_width="213dp"
+            android:layout_height="62dp"
             android:layout_marginTop="104dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="53dp"
+            android:fontFamily="@font/binggrae"
             android:text="비상이야~!"
             android:textAllCaps="false"
             android:textColor="#FFFCFC"
-            android:textSize="43sp"
+            android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +92,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/binggrae"
             android:text="버튼 조합"
             android:textColor="#000000"
             android:textSize="18sp"
@@ -132,6 +134,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/binggrae"
             android:text="설정 가이드"
             android:textColor="#000000"
             android:textSize="18sp"
@@ -174,6 +177,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/binggrae"
             android:text="보호자 연락처"
             android:textColor="#000000"
             android:textSize="18sp"
@@ -217,6 +221,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/binggrae"
             android:text="의료 정보"
             android:textColor="#000000"
             android:textSize="18sp"
