--- a/app/src/main/res/layout/activity_medical_information.xml
+++ b/app/src/main/res/layout/activity_medical_information.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="13dp"
         android:layout_marginBottom="56dp"
         android:background="@drawable/btn_design"
+        android:fontFamily="@font/binggrae"
         android:text="저장"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +48,7 @@
                 android:id="@+id/textview1"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 성"
                 android:textColor="#000000"
@@ -56,6 +58,7 @@
                 android:id="@+id/Input_FirstName"
                 android:layout_width="208dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
@@ -69,6 +72,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 이름"
                 android:textColor="#000000"
@@ -78,6 +82,7 @@
                 android:id="@+id/Input_LastName"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
@@ -91,6 +96,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 생년월일"
                 android:textColor="#000000"
@@ -100,6 +106,7 @@
                 android:id="@+id/Input_Birth"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
@@ -113,6 +120,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 성별"
                 android:textColor="#000000"
@@ -133,6 +141,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 혈액형"
                 android:textColor="#000000"
@@ -153,6 +162,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="148dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 키"
                 android:textColor="#000000"
@@ -162,6 +172,7 @@
                 android:id="@+id/Input_Tall"
                 android:layout_width="163dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:hint="cm"
                 android:inputType="number"
@@ -177,6 +188,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="148dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 몸무게"
                 android:textColor="#000000"
@@ -186,6 +198,7 @@
                 android:id="@+id/Input_Weight"
                 android:layout_width="163dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:hint="kg"
                 android:inputType="number"
@@ -201,6 +214,7 @@
                 android:id="@+id/textview8"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 알레르기"
                 android:textColor="#000000"
@@ -210,6 +224,7 @@
                 android:id="@+id/Input_Allergy"
                 android:layout_width="208dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
@@ -223,6 +238,7 @@
                 android:id="@+id/textview9"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 복용 중인 약"
                 android:textColor="#000000"
@@ -232,6 +248,7 @@
                 android:id="@+id/Input_Medicine"
                 android:layout_width="208dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="16sp" />
@@ -245,6 +262,7 @@
                 android:id="@+id/textview10"
                 android:layout_width="175dp"
                 android:layout_height="42dp"
+                android:fontFamily="@font/binggrae"
                 android:gravity="center_vertical"
                 android:text=" 기타"
                 android:textColor="#000000"
@@ -255,6 +273,7 @@
             android:id="@+id/Input_Other"
             android:layout_width="208dp"
             android:layout_height="42dp"
+            android:fontFamily="@font/binggrae"
             android:gravity="center_vertical"
             android:hint="위급 상황 시 가족에게 먼저 연락해주세요. "
             android:textColor="#000000"
