--- a/app/src/main/res/layout/emergency_widget.xml
+++ b/app/src/main/res/layout/emergency_widget.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/binggrae"
         android:gravity="center"
         android:text="119 긴급문자"
         android:textColor="#FFFFFF"
