--- a/app/src/main/res/layout/toolbar_button.xml
+++ b/app/src/main/res/layout/toolbar_button.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tv_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/binggrae"
         android:gravity="center"
         android:text="버튼설정"
         android:textColor="#ffffff"
