--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/setting_icon"
+            android:background="@drawable/setting_icon2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -203,10 +203,10 @@
 
         <android.widget.Button
             android:id="@+id/medical"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/medical_icon"
+            android:layout_width="97dp"
+            android:layout_height="103dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/medical_icon2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
