--- a/app/src/main/res/layout/item_container_onboarding.xml
+++ b/app/src/main/res/layout/item_container_onboarding.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="30dp"
     android:layout_marginEnd="30dp"
     android:layout_marginBottom="50dp"
     android:gravity="center"
-    android:padding="20dp" >
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/imageOnboarding"
-        android:layout_width="326dp"
-        android:layout_height="578dp"
+        android:layout_width="351dp"
+        android:layout_height="485dp"
         android:layout_margin="15dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_name" />
 
     <TextView
         android:id="@+id/textTitle"
-        android:layout_width="match_parent"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/binggrae"
         android:gravity="center"
         android:textColor="@color/colorTextPrimary"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textDescription"
-        android:layout_width="match_parent"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/colorTextSecondary"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
 
 
 </LinearLayout>
