--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
             android:layout_marginRight="24dp"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/binggrae"
-            android:text="버튼 조합"
+            android:text="버튼 설정"
             android:textColor="#000000"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
